--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   </section>
   <section class="section2">
     <div class="combine">
-      <div class="div1">
+      <div class="div">
         <b>Basic</b>
-        <h1>$19.99</h1>
+        <h1 class="dollar">$19.99</h1>
         <hr>
         <p>500 GB Storage</p>
         <hr>
@@ -48,9 +48,9 @@
         <hr>
         <button class="button">Learn More</button>
       </div>
-      <div class="div2">
+      <div class="div">
         <b>Professional</b>
-        <h1>$24.99</h1>
+        <h1 class="dollar">$24.99</h1>
         <hr>
         <p>1 TB Storage</p>
         <hr>
@@ -60,9 +60,9 @@
         <hr>
         <button class="button">Learn More</button>
       </div>
-      <div class="div1">
+      <div class="div">
         <b>Master</b>
-        <h1>$39.99</h1>
+        <h1 class="dollar">$39.99</h1>
         <hr>
         <p>2 tb Storage</p>
         <hr>
